--- a/app/src/main/res/layout/activity_repair_appliance.xml
+++ b/app/src/main/res/layout/activity_repair_appliance.xml
@@ -61,6 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1"
+                    android:paddingRight="20dp"
                     android:text="请选择您的家电品牌"
                     android:textSize="20dp" />
 
@@ -102,6 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1"
+                    android:paddingRight="20dp"
                     android:text="请选择您的家电类型"
                     android:textSize="20dp" />
 
@@ -143,6 +145,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1"
+                    android:paddingRight="20dp"
                     android:text="请选择您的家电型号"
                     android:textSize="20dp" />
 
@@ -185,6 +188,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1"
+                    android:paddingRight="20dp"
                     android:text="请选择您的家电故障点"
                     android:textSize="20dp" />
 
