--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/title"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/title"
     android:orientation="vertical">
 
 
@@ -42,6 +42,7 @@
                 android:textSize="25sp" />
 
             <ImageView
+                android:id="@+id/home_iv_person"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentRight="true"
@@ -58,7 +59,7 @@
     <com.youth.banner.Banner
         android:id="@+id/home_banner"
         android:layout_width="match_parent"
-        android:layout_height="150dp"></com.youth.banner.Banner>
+        android:layout_height="180dp"></com.youth.banner.Banner>
 
     <LinearLayout
         android:id="@+id/home_ll_mobile"
