添加了一些页面

--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.yxh.yixiuge.MyTopBar
+    <com.yxh.yixiuge.utils.MyTopBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp"
@@ -15,7 +15,7 @@
         android:paddingTop="10dp"
         app:leftSrc="@mipmap/fanhuilv"
         app:rightText="取消订单"
-        app:titleText="订单详情"></com.yxh.yixiuge.MyTopBar>
+        app:titleText="订单详情"></com.yxh.yixiuge.utils.MyTopBar>
 
     <include
         layout="@layout/include_title_line"
