添加了一些页面

--- a/app/src/main/res/layout/activity_address_management.xml
+++ b/app/src/main/res/layout/activity_address_management.xml
@@ -22,10 +22,12 @@
         android:layout_height="wrap_content" />
 
     <ListView
-        android:layout_width="wrap_content"
+        android:id="@+id/address_mana_lv"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"></ListView>
 
     <RelativeLayout
+        android:id="@+id/address_mana_rl_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
